<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_height="0dp">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:src="@drawable/new_logo"
            android:layout_gravity="center"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="0dp">

        <EditText
            android:id="@+id/editUserName"
            android:hint="@string/petname"
            android:inputType="text"
            style="@style/edit_bg"/>

        <EditText
            android:id="@+id/editPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/edit_bg"/>

        <TextView
             android:layout_marginTop="5dp"
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:textColor="@android:color/white"
            android:text="@string/forgot_pwd"/>

        <TextView
            android:id="@+id/txtLogin"
            style="@style/line_btn"
            android:text="@string/login"/>

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtFB"
                android:background="@drawable/fb_bg"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/facebook"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:gravity="center" />

        </FrameLayout>

    </LinearLayout>
</LinearLayout>