<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_above="@+id/rnBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/colorPrimary"
            style="@style/TitleStyle.StatusBar">

            <View
                android:id="@+id/vBack"
                android:background="@drawable/btn_back"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <View
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/icn_contact"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <View
                android:background="#40000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:visibility="visible"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView

                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="30dp"/>

                <LinearLayout
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heart"
                        android:textSize="15dp"
                        android:textColor="#F00"/>

                    <TextView
                        android:id="@+id/txtLikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:text="1932"/>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <View
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>

                <LinearLayout
                    android:visibility="gone"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <RelativeLayout
                        android:id="@+id/rnFirst"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp">

                            <View
                                android:id="@+id/vFirstIcon"
                                android:layout_width="30dp"
                                android:background="@drawable/icn_contact"
                                android:layout_height="match_parent"/>

                            <TextView
                                android:id="@+id/txtFirstTab"
                                android:layout_marginLeft="5dp"
                                android:textColor="@android:color/white"
                                android:text="Contact"
                                android:textStyle="bold"
                                android:gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rnSecond"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <View
                            android:background="@color/colorPrimaryDark"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>

                        <LinearLayout
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp">

                            <View
                                android:layout_width="30dp"
                                android:layout_height="match_parent"/>

                            <TextView
                                android:id="@+id/txtSecondTab"
                                android:layout_marginLeft="5dp"
                                android:textColor="@android:color/white"
                                android:text="Health"
                                android:textStyle="bold"
                                android:gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:visibility="gone"
                    android:background="@color/colorPrimaryDark"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"/>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtGender"
                        android:textColor="@color/gravy_deep"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:text="@string/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtGenderVal"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/gravy_deep"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtAge"
                        android:textColor="@color/gravy_deep"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:text="@string/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtAgeVal"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/gravy_deep"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtColor"
                        android:textColor="@color/gravy_deep"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:text="@string/color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtColorVal"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/gravy_deep"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtSize"
                        android:textColor="@color/gravy_deep"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:text="@string/size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtSizeVal"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/gravy_deep"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtStatus"
                        android:textColor="@color/gravy_deep"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:text="@string/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtStatusVal"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/gravy_deep"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtInfo"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/gravy_deep"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rnBottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/vContact"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/corner_solid"
            android:text="Adopt me"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            />

    </RelativeLayout>

</RelativeLayout>